Seperate bug with Curves & Hooks #41443

Closed
opened 2014-08-14 21:19:56 +02:00 by Karja Krähwald · 7 comments

System Information
Windows 7 64, HD 5770

Blender Version
Broken: 9337574 (release) & 7c9b8aa

Short description of error
Any Curve object:
Seperate (P in Editmode) crashes Blender when a Hook modifier is in its modifier list.
The Hook modifier need not to be assigned or active.

Exact steps for others to reproduce the error
CurveHookSeperate.blend

  • Add any curve.
  • Give it a Hook modifier.
  • Enter Editmode.
  • Select points or segments or whole curve.

Crash: Press P to seperate

**System Information** Windows 7 64, HD 5770 **Blender Version** Broken: 9337574 (release) & 7c9b8aa **Short description of error** Any Curve object: Seperate (P in Editmode) crashes Blender when a Hook modifier is in its modifier list. The Hook modifier need not to be assigned or active. **Exact steps for others to reproduce the error** [CurveHookSeperate.blend](https://archive.blender.org/developer/F103563/CurveHookSeperate.blend) - Add any curve. - Give it a Hook modifier. - Enter Editmode. - Select points or segments or whole curve. Crash: Press P to seperate

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @karja

Added subscriber: @karja

Added subscriber: @KevinMossey

Added subscriber: @KevinMossey

I'm able to repeat this problem on Win 7 64 bit. Stepping through the code line by line it seems to be crashing at

  static CVKeyIndex *getCVKeyIndex(EditNurb *editnurb, void *cv)
  {
  	return BLI_ghash_lookup(editnurb->keyindex, cv);
  }

in editcurve.c. While editnurb is not null, editnurb->keyindex is, so the downstream functions are referencing a null pointer, and crashing.

I'm able to repeat this problem on Win 7 64 bit. Stepping through the code line by line it seems to be crashing at ``` static CVKeyIndex *getCVKeyIndex(EditNurb *editnurb, void *cv) { return BLI_ghash_lookup(editnurb->keyindex, cv); } ``` in editcurve.c. While editnurb is not null, editnurb->keyindex is, so the downstream functions are referencing a null pointer, and crashing.

This issue was referenced by ddb843a1ac

This issue was referenced by ddb843a1acc3b6f255906d4b69fb5f3194c586b0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ddb843a1ac.

Closed by commit ddb843a1ac.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41443
No description provided.